--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,14 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
+    compile group: 'thisismydesign', name: 'stringprocessor', version: '2.2'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
