--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ repositories {
 }
 
 dependencies {
-    compile group: 'thisismydesign', name: 'stringprocessor', version: '2.2'
+    compile group: 'thisismydesign', name: 'stringprocessor', version: '2.3'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
 
+    testCompile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
